Fix double scroll bar bug

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -7,3 +7,9 @@ img {
   object-fit: cover;
   width: 100%;
 }
+
+/* Fix bug a double-scroll bar and Angular Material */
+/* No idea why this happens */
+mat-sidenav-container {
+  height: auto !important;
+}
